- Add Ch. 44 & 45 - Unify font loading - Fix anchor scrolling, so that the scrolled content is not hidden by   the stick navbar.

--- a/assets/css/chapter.css
+++ b/assets/css/chapter.css
@@ -1,3 +1,8 @@
+html {
+    scroll-padding-top: 130px;
+    scroll-behavior: smooth;
+}
+
 #content {
     max-width: 800px;
     font-family: var(--font-family);
